--- a/index.html
+++ b/index.html
@@ -34,8 +34,23 @@
     </header>
 
     <section>
+        
         <div class="container-main">
+            <div class="om-oss-title">
+                <p>Om Oss</p>
+            </div>
+            <div class="om-oss-wrapper">
+                <div class="om-oss-img">
+                    <img src="./images/5471.jpg" alt="">
+                </div>
+                <div class="om-oss-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia magnam a dolorum iusto voluptatem facere ipsum est illo ullam, tenetur repellat unde in voluptas dolorem excepturi consectetur officiis harum! Asperiores.</p>
+                </div>
+            </div>
             <div class="service">
+                <div class="service-title">
+                    <p>Tjänster</p>
+                </div>
                 <div class="service-wrapper">
                     <div class="service-items">
                         <img src="./images/web-design-svgrepo-com.svg" alt="">
