--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <div class="container-main">
             <div class="om-oss-title">
-                <p>Om Oss</p>
+                <p>Om oss</p>
             </div>
             <div class="om-oss-wrapper">
                 <div class="om-oss-img">
