--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <header>
-        <div class="container-main">
+        <div class="container">
             <nav class="primary-navigation">
                     <a href=""><img class="logo"src="./images/White logo - no background.svg"  alt="logo"></a>
                     <div class="dropdown">
