--- a/index.html
+++ b/index.html
@@ -86,17 +86,18 @@
                     <div class="service-items">
                         <img src="./images/web-design-svgrepo-com.svg" alt="">
                         <P class="service-text">Webbdesign</P>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                     </div>
+                    <div class="service-long-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p></div>
                     <div class="service-items">
                         <img src="./images/ux-o-svgrepo-com.svg" alt="">
                         <p class="service-text">UX/UI</p>
-                        
                     </div>
+                    <div class="service-long-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p></div>
                     <div class="service-items">
                         <img src="./images/accessibility-symbol-svgrepo-com.svg" alt="">
                         <p class="service-text">Tillgänglighet</p>
                     </div>
+                    <div class="service-long-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p></div>
                     <div class="service-items">
                         <img src="./images/responsive-tablet-svgrepo-com.svg" alt="">
                         <p class="service-text">Responsive design</p>
