--- a/index.html
+++ b/index.html
@@ -105,6 +105,23 @@
            <h2>Service 3</h2>
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt est quis turpis consectetur, in sodales libero convallis.</p>
     </div>
+    <div class="service">
+        
+        <img src="./images/reshot-icon-programming-S6F9V5BTWG.svg" alt="" >
+        <h2>Service 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt est quis turpis consectetur, in sodales libero convallis.</p>
+      </div>
+
+      <div class="service">
+        <img src="./images/reshot-icon-development-FRBQW5KAVU.svg" alt="" >
+        <h2>Service 2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt est quis turpis consectetur, in sodales libero convallis.</p>
+ </div>
+ <div class="service">
+        <img src="images/reshot-icon-web-programming-MD4LHYCT2W.svg" alt="" >
+        <h2>Service 3</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt est quis turpis consectetur, in sodales libero convallis.</p>
+ </div>
 </div>
 
 
