--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a href="#">Refrenser</a>
                         </li>
                         <li>
-                            <a href="#">Kontakt</a>
+                            <a href="index/Kontakt.html">Kontakt</a>
                         </li>
                     </ul>
                         
