--- a/index/Kontakt.html
+++ b/index/Kontakt.html
@@ -14,7 +14,7 @@
     
       <header class="header-nav">
         <div class="content-nav">
-            <a class="logo" href="#">
+            <a class="logo" href="../index.html">
                 <img src="../images/White logo - no background.svg" alt="" width="100px">
             </a>
             <div class="toggler">
@@ -29,13 +29,13 @@
                       <a href="#" >Om oss</a>
                    </li>
                     <li>
-                            <a href="#">Refrenser</a>
+                            <a href="./refrence.html">Refrenser</a>
                     </li>
                      <li>
                             <a href="#">Tjänster</a>
                         </li>
                         <li>
-                            <a href="index/Kontakt.html" class="active">Kontakt</a>
+                            <a href="./kontakt.html" class="active">Kontakt</a>
                         </li>
                 </ul>           
             </nav>
