--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 
               <ul>
                    <li>
-                      <a href="#" class="active">Om oss</a>
+                      <a href="#" >Om oss</a>
                    </li>
                     <li>
-                            <a href="#">Refrenser</a>
+                            <a href="index/refrenser.html">Refrenser</a>
                     </li>
                      <li>
                             <a href="#">Tjänster</a>
                         </li>
                         <li>
-                            <a href="index/Kontakt.html">Kontakt</a>
+                            <a href="index/kontakt.html">Kontakt</a>
                         </li>
                 </ul>
                            
