--- a/index/Kontakt.html
+++ b/index/Kontakt.html
@@ -26,10 +26,10 @@
             <nav>
                 <ul>
                    <li>
-                      <a href="#" >Om oss</a>
+                      <a href="./om oss.html" >Om oss</a>
                    </li>
                     <li>
-                            <a href="./refrence.html">Refrenser</a>
+                            <a href="./refrenser.html">Refrenser</a>
                     </li>
                      <li>
                             <a href="#">Tjänster</a>
