--- a/index/refrenser.html
+++ b/index/refrenser.html
@@ -24,16 +24,16 @@
             <nav>
                 <ul>
                    <li>
-                      <a href="#" >Om oss</a>
+                      <a href="./om oss.html" >Om oss</a>
                    </li>
                     <li>
-                            <a href="" class="active">Refrenser </a>
+                            <a href="./refrenser.html" class="active">Refrenser </a>
                     </li>
                      <li>
                             <a href="#">Tjänster</a>
                         </li>
                         <li>
-                            <a href="index/Kontakt.html" >Kontakt</a>
+                            <a href="./kontakt.html" >Kontakt</a>
                         </li>
                 </ul>           
             </nav>
