--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a href="#">Tjänster</a>
                         </li>
                         <li>
-                            <a href="index/kontakt.html">Kontakt</a>
+                            <a href="index/Kontakt.html">Kontakt</a>
                         </li>
                 </ul>
                            
