--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
               <ul>
                    <li>
-                      <a href="#" >Om oss</a>
+                      <a href="./index/om oss.html" >Om oss</a>
                    </li>
                     <li>
                             <a href="index/refrenser.html">Refrenser</a>
@@ -37,7 +37,7 @@
                             <a href="#">Tjänster</a>
                         </li>
                         <li>
-                            <a href="index/Kontakt.html">Kontakt</a>
+                            <a href="./index/kontakt.html">Kontakt</a>
                         </li>
                 </ul>
                            
