--- a/index/om oss.html
+++ b/index/om oss.html
@@ -68,26 +68,26 @@
 
 		<div class="team-content">
 			<div class="box">
-				<img src="img/01.png">
+				<img src="../images/39547.jpg">
 				<h3>Steph Jobs</h3>
 				<h5>Artist</h5>
 				
 			</div>
 
 			<div class="box">
-				<img src="img/02.png">
+				<img src="../images/Children_avatars_01Un_15.jpg">
 				<h3>Steph Jobs</h3>
 				<h5>Artist</h5>
 			</div>
 
 			<div class="box">
-				<img src="img/03.png">
+				<img src="../images/39547.jpg">
 				<h3>Steph Jobs</h3>
 				<h5>Artist</h5>
 			</div>
 
 			<div class="box">
-				<img src="img/04.png">
+				<img src="../images/39564.jpg">
 				<h3>Steph Jobs</h3>
 				<h5>Artist</h5>
 			</div>
