--- a/index.html
+++ b/index.html
@@ -67,15 +67,17 @@
 
     <div class="om-oss">
         
+        <div class="om-oss-title">
+            <p>Om oss</p>
+        </div>
+
             <div class="om-oss-wrapper">
-                <div class="om-oss-title">
-                    <p>Om oss</p>
-                </div>
+               
                 <div class="om-oss-img">
                     <img src="./images/5471.jpg" alt="">
                 </div>
                 <div class="om-oss-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia magnam a dolorum iusto voluptatem facere ipsum est illo ullam, tenetur repellat unde in voluptas dolorem excepturi consectetur officiis harum! Asperiores.</p>
+                    <p>Vi är ett dedikerat team av kreativa individer med en gemensam passion - att skapa webblösningar som inspirerar och engagerar. Vår resa började med ett starkt fokus på design och har utvecklats till att omfatta webbutveckling, digital marknadsföring och en stark vilja att hjälpa våra kunder att nå sina mål online. </p>
                 </div>
             </div>
         </div>
