--- a/index.html
+++ b/index.html
@@ -78,11 +78,17 @@
             </div>
         </div>
 
-           <!--service--> 
+          
 
 
     
 </div>
+<div class="between-image">
+    <img src="./images/pexels-jakub-zerdzicki-18721087.jpg" alt="">
+</div>
+
+ <!--service--> 
+
 <div class="service-title">
     <p>TJÄNSTER</p>
 </div>
