--- a/index/tjänster.html
+++ b/index/tjänster.html
@@ -39,6 +39,10 @@
         </div> 
       </header>
 
+      <div class="service-title">
+        <p>VÅRA TJÄNSTER</p>
+    </div>
+
       <div class="service-section">
         <div class="service">
            <img src="../images/regulation.png" alt="" >
