--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         
         <div class="om-oss-title">
-            <p>OM OSS!</p>
+            <p>Engagerad & certifierad kompetense</p>
         </div>
         
             <div class="om-oss-wrapper">               
