--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
         
             <div class="om-oss-wrapper">               
                 <div class="om-oss-img">
-                    <img src="./images/5471.jpg" alt="">
+                    <img src="" alt="">
                 </div>
                 <div class="om-oss-text">
                     <p>Vi är ett dedikerat team av kreativa individer med en gemensam passion - att skapa webblösningar som inspirerar och engagerar. Vår resa började med ett starkt fokus på design och har utvecklats till att omfatta webbutveckling, digital marknadsföring och en stark vilja att hjälpa våra kunder att nå sina mål online. </p>
                 </div>
             </div>
+            <button class="button-1" >Lära känna oss!</button>
         </div>
 
           
