--- a/index/om oss.html
+++ b/index/om oss.html
@@ -56,13 +56,13 @@
                     <img src="../images/5471.jpg" alt="om oss">
                 </div>
                 <div class="om-oss-text">
-                    <p>Vi är ett dedikerat team av kreativa individer med en gemensam passion - att skapa webblösningar som inspirerar och engagerar. Vår resa började med ett starkt fokus på design och har utvecklats till att omfatta webbutveckling, digital marknadsföring och en stark vilja att hjälpa våra kunder att nå sina mål online. </p>
+                    <p> <em> "Designa, Utveckla, Inspirera"</em><br><br><p>Vi är ett dedikerat team av kreativa individer med en gemensam passion - att skapa webblösningar som inspirerar och engagerar. Vår resa började med ett starkt fokus på design och har utvecklats till att omfatta webbutveckling, digital marknadsföring och en stark vilja att hjälpa våra kunder att nå sina mål online. </p>
                 </div>
             </div>
     </div>
 
 
-
+<div class="title-team">Våra medarbetare</div>
       <section class="team">
 		<div class="team-content">
 			<div class="box">
