--- a/index/tjänster.html
+++ b/index/tjänster.html
@@ -39,7 +39,7 @@
         </div> 
       </header>
 
-      <div class="service-title">
+      <div class="service-title-2">
         <p>VÅRA TJÄNSTER</p>
     </div>
 
@@ -57,7 +57,7 @@
            <button>Få en offert</button>
     </div>
     <div class="service">
-           <img src="images/shopping.png" alt="" >
+           <img src="../images/shopping.png" alt="" >
            <h2>E-handelslösningar</h2>
            <p>Vår e-handelsutveckling ger dig möjligheten att sälja produkter online med användarvänliga och säkra plattformar. Vi skapar anpassade lösningar som uppfyller dina affärsmål.</p>
            <button>Få en offert</button>
